@@ -4,7 +4,7 @@ use Moose;
 use utf8;
 no warnings qw(uninitialized);
 extends 'Lacuna::RPC';
-use Lacuna::Util qw(format_date randint);
+use Lacuna::Util qw(format_date randint real_ip_address);
 use DateTime;
 use String::Random qw(random_string);
 use UUID::Tiny ':std';
@@ -84,55 +84,66 @@ sub login {
     unless (defined $empire) {
          confess [1002, 'Empire does not exist.', $name];
     }
-    my $throttle = Lacuna->config->get('rpc_throttle') || 30;
+
+    my %session_params = (
+                          api_key => $api_key,
+                          request => $plack_request,
+                         );
+
+    if ($empire->is_password_valid($password)) {
+        if ($empire->stage eq 'new') {
+            confess [1100, "Your empire has not been completely created. You must complete it in order to play the game.", { empire_id => $empire->id } ];
+        }
+    }
+    elsif ($password ne '' && $empire->sitter_password eq $password) {
+        $session_params{is_sitter} = 1;
+    }
+    else {
+        my $ip = real_ip_address($plack_request);
+
+        # might be a mistake, might be an out of date sitter, might be
+        # a hacking attempt, let the user know.
+        unless (Lacuna->cache->get('invalid_login_attempt_' . $ip, $empire->id)) {
+            Lacuna->cache->set('invalid_login_attempt_' . $ip, $empire->id, 1, 12 * 60 * 60);
+            $empire->send_predefined_message(
+                                             filename => 'invalid_login_attempt.txt',
+                                             params   => [ $ip ],
+                                             from     => $empire->lacuna_expanse_corp,
+                                             tags     => [ 'Alert' ],
+                                            );
+        }
+
+        confess [1004, 'Password incorrect (' . $ip . ')', $password];
+    }
+
+    my $config = Lacuna->config;
+    my $throttle = $config->get('rpc_throttle') || 30;
     if ($empire->rpc_rate > $throttle) {
         Lacuna->cache->increment('rpc_limit_'.format_date(undef,'%d'), $empire->id, 1, 60 * 60 * 30);
         confess [1010, 'Slow down, '.$empire->name.'! No more than '.$throttle.' requests per minute.'];
     }
-    my $max = Lacuna->config->get('rpc_limit') || 2500;
+    my $max = $config->get('rpc_limit') || 2500;
     if ($empire->rpc_count > $max) {
         confess [1010, $empire->name.' has already made the maximum number of requests ('.$max.') you can make for one day.'];
     }
-    my $config = Lacuna->config;
     my $firebase_config = $config->get('firebase');
     if ($firebase_config)
     {
         my $auth_code = Firebase::Auth->new( 
             secret  => $firebase_config->{auth}{secret}, 
             data    => {
-                uid          => $empire->id,
+                uid         => $empire->id,
                 isModerator => $empire->chat_admin ? \1 : \0,
-                isStaff => $empire->is_admin ? \1 : \0,
+                isStaff     => $empire->is_admin ? \1 : \0,
             }
-         #   data   => $data,
         )->create_token;
     }
 
-    if ($empire->is_password_valid($password)) {
-        if ($empire->stage eq 'new') {
-            confess [1100, "Your empire has not been completely created. You must complete it in order to play the game.", { empire_id => $empire->id } ];
-        }
-        return { 
-            session_id  => $empire->start_session({ 
-                api_key     => $api_key, 
-                request     => $plack_request,
-            })->id, 
-            status          => $self->format_status($empire),
-        };
-    }
-    elsif ($password ne '' && $empire->sitter_password eq $password) {
-        return {
-            session_id  => $empire->start_session({ 
-                api_key     => $api_key, 
-                request     => $plack_request, 
-                is_sitter   => 1,
-            })->id, 
-            status          => $self->format_status($empire),
-        };
-    }
-    else {
-        confess [1004, 'Password incorrect.', $password];            
-    }
+    return {
+        session_id  => $empire->start_session(\%session_params)->id,
+        status      => $self->format_status($empire),
+    };
+
 }
 
 
