@@ -30,6 +30,7 @@
  - Mod: Oracle cooldown on BHG movement shortened to a flat 5 minutes.
  - Mod: BHG Neutralization does not effect own alliance.
  - Mod: BHG Can no longer swap with seized hostiles.
+ - Mod: Invalid login attempts warns.
 
 3.0908:
  - Mod: trash_messages_where now defaults to not returning deleted message IDs.
